--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-arbys",
   "version": "0.1.0",
+  "homepage": "https://cxs2549.github.io/react-marriott",
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
@@ -23,7 +24,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
