--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-arbys",
+  "name": "react-marriott",
   "version": "0.1.0",
   "homepage": "https://cxs2549.github.io/react-marriott",
   "private": true,
